[gd_scene load_steps=11 format=2]

[ext_resource path="res://img/layouts/depot.png" type="Texture" id=1]
[ext_resource path="res://scripts/screens/depot.gd" type="Script" id=2]
[ext_resource path="res://Scenes/screens/login_theme.tres" type="Theme" id=3]
[ext_resource path="res://fonts/arial/ARIAL.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://img/icons/connection_icon.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=5]
size = 5
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )
Button/colors/font_color = Color( 0.317647, 0.584314, 0.776471, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 0.901961, 0.901961, 0.901961, 1 )
Button/constants/hseparation = 0
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 3
border_width_top = 3
border_width_right = 1
border_width_bottom = 2
anti_aliasing = false

[sub_resource type="Theme" id=4]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/decrement_pressed = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/icons/increment_pressed = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = SubResource( 3 )
VScrollBar/styles/scroll_focus = null

[sub_resource type="DynamicFont" id=7]
size = 7
font_data = ExtResource( 4 )

[node name="Depot" type="Control"]
mouse_filter = 2
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 140.0
margin_bottom = 120.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="TextureRect"]
margin_left = 99.0
margin_top = 3.0
margin_right = 134.0
margin_bottom = 16.0
theme = SubResource( 6 )
text = "Confirmar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect"]
margin_left = 56.0
margin_top = 3.0
margin_right = 85.0
margin_bottom = 17.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0980392, 0.580392, 0.803922, 1 )
text = "Depot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainerBag" type="GridContainer" parent="TextureRect"]
margin_left = 6.0
margin_top = 17.0
margin_right = 134.0
margin_bottom = 37.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainerDepot" type="ScrollContainer" parent="TextureRect"]
margin_left = 3.0
margin_top = 43.0
margin_right = 137.0
margin_bottom = 117.0
rect_min_size = Vector2( 134, 74 )
mouse_filter = 2
theme = SubResource( 4 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="TextureRect/ScrollContainerDepot"]
margin_bottom = 62.0
rect_min_size = Vector2( 0, 62 )
mouse_filter = 2
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading" type="Node2D" parent="."]
position = Vector2( 17, 96 )

[node name="Loading" type="Label" parent="Loading"]
margin_left = 16.0
margin_top = -8.0
margin_right = 99.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.0980392, 0.580392, 0.803922, 1 )
custom_fonts/font = SubResource( 7 )
text = "Estabelecendo conexão 
com Laboratório ..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectionIcon" type="Sprite" parent="Loading"]
position = Vector2( 55, -29 )
scale = Vector2( 0.0717434, 0.0717435 )
texture = ExtResource( 5 )

[connection signal="pressed" from="TextureRect/Button" to="." method="_on_Button_pressed"]
